GNU bug report logs - #24795
sha1sum cannot find file to check

Previous Next

Package: coreutils;

Reported by: Francesco Turco <fturco <at> fastmail.fm>

Date: Tue, 25 Oct 2016 17:27:02 UTC

Severity: normal

Done: Pádraig Brady <P <at> draigBrady.com>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 24795 in the body.
You can then email your comments to 24795 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-coreutils <at> gnu.org:
bug#24795; Package coreutils. (Tue, 25 Oct 2016 17:27:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Francesco Turco <fturco <at> fastmail.fm>:
New bug report received and forwarded. Copy sent to bug-coreutils <at> gnu.org. (Tue, 25 Oct 2016 17:27:03 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Francesco Turco <fturco <at> fastmail.fm>
To: bug-coreutils <at> gnu.org
Subject: sha1sum cannot find file to check
Date: Tue, 25 Oct 2016 19:26:24 +0200
I'm using coreutils-8.25-2 on a Parabola GNU/Linux-libre system.
I think I found a bug with the "sha1sum" command.

Steps to reproduce:
1) wget https://dumps.wikimedia.org/enwikisource/20161020/enwikisource-
20161020-pages-articles.xml.bz2
2) wget https://dumps.wikimedia.org/enwikisource/20161020/enwikisource-
20161020-sha1sums.txt
3) sha1sum -c enwikisource-20161020-sha1sums.txt --ignore-missing

Result:
sha1sum: enwikisource-20161020-sha1sums.txt: no file was verified

Expected result:
enwikisource-20161020-pages-articles.xml.bz2: OK

-- 
https://www.fturco.net/




Information forwarded to bug-coreutils <at> gnu.org:
bug#24795; Package coreutils. (Tue, 25 Oct 2016 18:53:02 GMT) Full text and rfc822 format available.

Message #8 received at 24795 <at> debbugs.gnu.org (full text, mbox):

From: Pádraig Brady <P <at> draigBrady.com>
To: Francesco Turco <fturco <at> fastmail.fm>, 24795 <at> debbugs.gnu.org
Subject: Re: bug#24795: sha1sum cannot find file to check
Date: Tue, 25 Oct 2016 19:52:12 +0100
On 25/10/16 18:26, Francesco Turco wrote:
> I'm using coreutils-8.25-2 on a Parabola GNU/Linux-libre system.
> I think I found a bug with the "sha1sum" command.
> 
> Steps to reproduce:
> 1) wget https://dumps.wikimedia.org/enwikisource/20161020/enwikisource-
> 20161020-pages-articles.xml.bz2
> 2) wget https://dumps.wikimedia.org/enwikisource/20161020/enwikisource-
> 20161020-sha1sums.txt
> 3) sha1sum -c enwikisource-20161020-sha1sums.txt --ignore-missing
> 
> Result:
> sha1sum: enwikisource-20161020-sha1sums.txt: no file was verified
> 
> Expected result:
> enwikisource-20161020-pages-articles.xml.bz2: OK
> 

This seems like the txt file is in DOS format with \r\n line endings.
If you remove the --ignore-missing option, are you presented with
$'\r' representations in the missing file names?
Though when I downloaded the file it was in unix format so I'm confused




Information forwarded to bug-coreutils <at> gnu.org:
bug#24795; Package coreutils. (Wed, 26 Oct 2016 08:31:02 GMT) Full text and rfc822 format available.

Message #11 received at 24795 <at> debbugs.gnu.org (full text, mbox):

From: Francesco Turco <fturco <at> fastmail.fm>
To: 24795 <at> debbugs.gnu.org
Subject: Re: bug#24795: sha1sum cannot find file to check
Date: Wed, 26 Oct 2016 10:30:47 +0200
On Tue, 2016-10-25 at 19:52 +0100, Pádraig Brady wrote:
> This seems like the txt file is in DOS format with \r\n line endings.
> If you remove the --ignore-missing option, are you presented with
> $'\r' representations in the missing file names?
> Though when I downloaded the file it was in unix format so I'm
> confused

If I remove the --ignore-missing option no \r characters appear in the
output, so the checksum file uses Unix line endings.

If I convert the checksum file to DOS line endings with unix2dos I can
see \r line endings in the output.

There is another difference by using --ignore-missing: when using DOS
line endings sha1sum immediately says "no file was verified", without
checking anything; when using Unix line endings it says the same thing
but after a few seconds, so it must have checked something behind the
scenes.

-- 
https://www.fturco.net/




Reply sent to Pádraig Brady <P <at> draigBrady.com>:
You have taken responsibility. (Wed, 26 Oct 2016 14:56:02 GMT) Full text and rfc822 format available.

Notification sent to Francesco Turco <fturco <at> fastmail.fm>:
bug acknowledged by developer. (Wed, 26 Oct 2016 14:56:02 GMT) Full text and rfc822 format available.

Message #16 received at 24795-done <at> debbugs.gnu.org (full text, mbox):

From: Pádraig Brady <P <at> draigBrady.com>
To: Francesco Turco <fturco <at> fastmail.fm>, 24795-done <at> debbugs.gnu.org
Subject: Re: bug#24795: sha1sum cannot find file to check
Date: Wed, 26 Oct 2016 15:55:56 +0100
[Message part 1 (text/plain, inline)]
On 26/10/16 09:30, Francesco Turco wrote:
> On Tue, 2016-10-25 at 19:52 +0100, Pádraig Brady wrote:
>> This seems like the txt file is in DOS format with \r\n line endings.
>> If you remove the --ignore-missing option, are you presented with
>> $'\r' representations in the missing file names?
>> Though when I downloaded the file it was in unix format so I'm
>> confused
> 
> If I remove the --ignore-missing option no \r characters appear in the
> output, so the checksum file uses Unix line endings.
> 
> If I convert the checksum file to DOS line endings with unix2dos I can
> see \r line endings in the output.
> 
> There is another difference by using --ignore-missing: when using DOS
> line endings sha1sum immediately says "no file was verified", without
> checking anything; when using Unix line endings it says the same thing
> but after a few seconds, so it must have checked something behind the
> scenes.

Ouch that is a bug, triggered when --ignore-missing is used
with checksums that start with 00....
The attached should fix it up.

thanks,
Pádraig

[md5sum--ignore-missing-00.patch (text/x-patch, attachment)]

Information forwarded to bug-coreutils <at> gnu.org:
bug#24795; Package coreutils. (Mon, 31 Oct 2016 13:05:02 GMT) Full text and rfc822 format available.

Message #19 received at 24795 <at> debbugs.gnu.org (full text, mbox):

From: Bernhard Voelker <mail <at> bernhard-voelker.de>
To: 24795 <at> debbugs.gnu.org, P <at> draigBrady.com, fturco <at> fastmail.fm
Subject: Re: bug#24795: sha1sum cannot find file to check
Date: Mon, 31 Oct 2016 14:03:54 +0100
On 10/26/2016 04:55 PM, Pádraig Brady wrote:
> Ouch that is a bug, triggered when --ignore-missing is used
> with checksums that start with 00....
> The attached should fix it up.

Nice one; the fix looks good to me.
All downstream projects should pick that up.

Have a nice day,
Berny





bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Tue, 29 Nov 2016 12:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 7 years and 160 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.